[package]
name = "vega"
version = "2.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
sysinfo = { version = "0.37.0", default-features = false, features = ["network", "system"] }
libc = { version = "0.2.175", default-features = false }
pci-info = { version = "0.3.4", default-features = false }
pci-ids = { version = "0.2.5", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", default-features = false }


[build-dependencies]
anyhow = "1.0.99"
